--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     <h1 class="mbr-section-title display-1">International Space Clean-Up</h1>
-                    <p class="mbr-section-lead lead"><br>				</p><p>Page for information on the space clean-up efforts to<span style="font-size: 1.07rem;">&nbsp;be carried out by NASA, CSA, ESA, Roscosmos, and JAX i</span><span style="font-size: 1.07rem;">n conjunction with the International Space Junkies</span></p><p></p>
+                    <p class="mbr-section-lead lead"><br>				</p><p>Page for information on the space clean-up efforts to<span style="font-size: 1.07rem;">&nbsp;be carried out by NASA, CSA, ESA, Roscosmos, and JAXA i</span><span style="font-size: 1.07rem;">n conjunction with the International Space Junkies</span></p><p></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="index.html#header5-2">Overview</a> <a class="btn btn-lg btn-white btn-white-outline" href="https://mobirise.com">Contact Us</a></div>
                 </div>
             </div>
